# phi2-rs

./: Cargo.toml  README.md
src/: cache.rs  config.rs  generate.rs  main.rs  model.rs  nn_loader.rs  rmsnorm.rs  rotary.rs  tensor_loader.rs
