[package]
name = "phi2-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safetensors="*"
memmap2={version="0.7.1", features=["stable_deref_trait"]}
anyhow="*"
yoke={version="0.7.3", features=["derive"]}
tokenizers="*"
rand="*"
num-traits = { version = "0.2.17", default-features = false }
clap="*"
half="*"

[dependencies.dfdx]
git = "https://github.com/coreylowman/dfdx"
version = "0.13.0"
optional = false

[dependencies.dfdx-core]
git = "https://github.com/coreylowman/dfdx"
version = "0.13.0"
optional = false

[dependencies.dfdx-derives]
git = "https://github.com/coreylowman/dfdx"
version = "0.13.0"
optional = false


[features]
safetensors=["dfdx/safetensors", "dfdx-core/safetensors"]
cuda = ["dfdx/cuda", "dfdx-core/cuda"]
cpu = ["dfdx/cpu", "dfdx-core/cpu"]
f16 = ["dfdx/f16", "dfdx-core/f16"]
default=["safetensors", "cpu", "f16"]


